fix: add invisible label for post input

--- a/Views/styles/feed.css
+++ b/Views/styles/feed.css
@@ -97,6 +97,16 @@ input[type="file"] {
     display: none;
 }
 
+.hiddenLabel {
+    position: absolute;
+    clip: rect(1px, 1px, 1px, 1px);
+    padding: 0;
+    border: 0;
+    height: 1px;
+    width: 1px;
+    overflow: hidden;
+    white-space: nowrap;
+}
 .hide {
     display: none;
 }
